--- a/my-website/src/containers/header/header.css
+++ b/my-website/src/containers/header/header.css
@@ -20,7 +20,7 @@
     font-size: 90px;
     line-height: 75px;
     letter-spacing: -0.04em;
-    text-shadow: -6px -6px #C2E7DA;
+    text-shadow: -6px -6px #F1DAC4;
     margin-top: 3rem;
 }
 
@@ -34,63 +34,14 @@
     margin-top: 1.5rem;
 }
 
-/* .gpt3__header-content__input {
-    width: 100%;
-    margin: 2rem 0 1rem;
-
-    display: flex;
-    flex-direction: row;
-} */
-
-/* .gpt3__header-content__input input {
-    flex: 2;
-    width: 100%;
-    min-height: 50px;
-    font-family: var(--font-family);
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 28px;
-    background: var(--color-footer);
-    border: 2px solid var(--color-footer);
-    padding: 0 1rem;
-    outline: none;
-    color: #fff;
-
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-} */
-
-/* .gpt3__header-content__input button {
-    flex: 0.2;
-    width: 100%;
-    min-height: 50px;
-    font-family: var(--font-family);
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 28px;
-    background: #1A1B41;
-    border: 2px solid #BAFF29;
-    padding: 0 1rem;
-    color: #BAFF29;
-    cursor: pointer;
-    outline: none;
-
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-
-    margin-top: 2rem;
-} */
-
 
 /* button */
 .gpt3__header-content__input button {
   background-color: #1A1B41;
-  border: 2px solid #BAFF29;
+  border: 2px solid #F1DAC4;
   border-radius: 5px;
-  box-shadow: #BAFF29 4px 4px 0 0;
-  color: #BAFF29;
+  box-shadow: #F1DAC4 4px 4px 0 0;
+  color: #F1DAC4;
   cursor: pointer;
   display: inline-block;
   padding: 0 18px;
@@ -111,7 +62,7 @@
 }
 
 .gpt3__header-content__input button:active {
-  box-shadow: #BAFF29 2px 2px 0 0;
+  box-shadow: #F1DAC4 2px 2px 0 0;
   transform: translate(2px, 2px);
 }
 
@@ -122,48 +73,15 @@
   }
 }
 
-
-
-/* .gpt3__header-content__people {
-    width: 100%;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    flex-direction: row;
-
-    margin-top: 2rem;
-}
-
-.gpt3__header-content__people img {
-    width: 181.79px;
-    height: 38px;
-} */
-
-/* .gpt3__header-content__people p {
-    margin: 0 0 0 1rem;
-    font-family: var(--font-family);
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 38px;
-    color: #fff;
-    text-align: center;
-} */
-
 .gpt3__header-image {
     flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
-    /* box-shadow: 10px 10px 10px #6290C3;
-    border: 2px solid #C2E7DA;
-    border-radius: 10px;
-    padding-left: 2%;
-    padding-right: 2%;
-    padding-top: 6%; */
 }
 
 .gpt3__header-image img {
-    width: 90%;
+    width: 80%;
     height: auto;
 }
 
