--- a/my-website/src/index.css
+++ b/my-website/src/index.css
@@ -2,11 +2,11 @@
 
 :root {
   --font-family: 'Manrope', sans-serif;
-  --gradient-text: linear-gradient(89.97deg, #6290C3 1.84%, #266dbd 102.67%);
-  --gradient-bar: linear-gradient(103.22deg, #6290C3 -13.86%, #266dbd 99.55%);
-  --color-bg: #040C18;
-  --color-footer : #031B34;
+  --gradient-text: linear-gradient(89.97deg, #A69CAC 1.84%, #266dbd 102.67%);
+  --gradient-bar: linear-gradient(103.22deg, #A69CAC -13.86%, #266dbd 99.55%);
+  --color-bg: #0D0C1D;
+  --color-footer : #0D0C1D;
   --color-blog: #042c54;
-  --color-text: #81AFDD;
-  --color-subtext: #BAFF29;
+  --color-text: #A69CAC;
+  --color-subtext: #F1DAC4;
 }
